--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
-    "next": "12.0.8",
+    "next": "^10.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-flip-move": "^3.0.4",
@@ -18,8 +18,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.8",
+    "eslint-config-next": "^0.2.4",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15"
   }
